--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="content-type" content="text/html">
+  <meta http-equiv="content-type" content="text">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Путешествия по России</title>
   <meta name="author" content="Сухов Андрей">
@@ -52,41 +52,42 @@
       <section class="photo-grid__content">
         <ul class="photo-grid">
           <li>
-        <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="фото из окна вагона">
-      </li>
-      <li>
-        <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="облака на вершине горы">
-      </li>
-      <li>
-        <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="сабака на стоге сена в поле">
-      </li>
-      <li>
-        <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="лес в тумане">
-      </li>
-      <li>
-        <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="автомобиль на льду озера">
-      </li>
-      <li>
-        <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="фото на берегу озера">
-      </li>
-      <li>
-        <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="покрытые снегом вершины гор">
-      </li>
-      <li>
-        <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="дорожный знак пешеходный переход">
-      </li>
-      <li>
-        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="холмы в тумане">
-      </li>
-      <li>
-        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="фото горы">
-      </li>
-      <li>
-        <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="фото скалы на берегу моря">
-      </li>
-      <li>
-        <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="фото туман на вершине горы">
-      </li>
+            <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="фото из окна вагона">
+          </li>
+          <li>
+            <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="облака на вершине горы">
+          </li>
+          <li>
+            <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="сабака на стоге сена в поле">
+          </li>
+          <li>
+            <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="лес в тумане">
+          </li>
+          <li>
+            <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="автомобиль на льду озера">
+          </li>
+          <li>
+            <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="фото на берегу озера">
+          </li>
+          <li>
+            <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="покрытые снегом вершины гор">
+          </li>
+          <li>
+            <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg"
+              alt="дорожный знак пешеходный переход">
+          </li>
+          <li>
+            <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="холмы в тумане">
+          </li>
+          <li>
+            <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="фото горы">
+          </li>
+          <li>
+            <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="фото скалы на берегу моря">
+          </li>
+          <li>
+            <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="фото туман на вершине горы">
+          </li>
         </ul>
       </section>
       <section class="places">
@@ -98,22 +99,29 @@
           </div>
           <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
           <div class="place__container-text">
-            <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
-            <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+            <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных
+              горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн
+              Балтийского моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.</p>
+            <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается.
+              Для&nbsp;путешественника
+              и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская
+              коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест
+              исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.</p>
           </div>
         </article>
         <article class="place">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link"
-              href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National
+            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+              target="_blank">National
               Geographic</a>
           </div>
           <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
           <div class="place__container-text">
-            <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой
-              на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+            <p class="place__paragraph">Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра,
+              от&nbsp;которой на&nbsp;юг&nbsp;&mdash;
+              тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.</p>
             <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
               Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии.
               Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно
@@ -125,8 +133,8 @@
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link"
-              href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
+            <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+              target="_blank">Facebook</a>
           </div>
           <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
           <div class="place__container-text">
@@ -143,25 +151,26 @@
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="https://vk.com/baikalmile"
-              target="_blank">https://vk.com/baikalmile</a>
+            <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
           </div>
           <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
           <div class="place__container-text">
-            <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
+            <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
+              в&nbsp;мире. Многие также знают, что это самый большой источник пресной воды и&nbsp;одно
+              из&nbsp;красивейших мест&nbsp;в&nbsp;России.
             </p>
-            <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
-              скийорингу. Это такой вид спорта, когда лыжник привязывает себя
-              к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
-              «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+            <p class="place__paragraph">Конечно, это всё так. Но&nbsp;Байкал&nbsp;ещё идеальное место для
+              соревнований по&nbsp;скийорингу.&nbsp;Это такой вид спорта, когда лыжник привязывает себя
+              к&nbsp;мотоциклу, и&nbsp;тандем старается развить как можно б&oacute;льшую скорость на&nbsp;льду.
+              В&nbsp;марте 2019 года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой
+              рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.</p>
           </div>
         </article>
         <article class="place">
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="http://vodlozero.ru"
-              target="_blank">http://vodlozero.ru/</a>
+            <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
           </div>
           <img class="place__image" src="./images/place-karelia.jpg" alt="Корелия">
           <div class="place__container-text">
@@ -177,8 +186,8 @@
       <section class="cover">
         <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
           <h2 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h2>
-          <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе —&nbsp;путешествие от&nbsp;столицы
-            до&nbsp;Байкала на&nbsp;электричках.</p>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе —&nbsp;путешествие
+            от столицы до Байкала на электричках.</p>
         </a>
       </section>
     </main>
