--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <header class="header">
       <img class="header__logo" src="./images/header-logo.svg" alt="Изображение карты России">
       <ul class="header__lang">
-        <li><a class="header__lang-link header__lang-link_decoration" href="#">Ru</a></li>
-        <li><a class="header__lang-link" href="#">En</a></li>
+        <li><a class="header__lang-link header__lang-link_active opacity-link" href="#">Ru</a></li>
+        <li><a class="header__lang-link opacity-link" href="#">En</a></li>
       </ul>
     </header>
     <main class="content">
@@ -94,7 +94,7 @@
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+            <a class="place__link opacity-link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
           </div>
           <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
           <div class="place__container-text">
@@ -112,7 +112,7 @@
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+            <a class="place__link opacity-link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
               target="_blank">National
               Geographic</a>
           </div>
@@ -132,7 +132,7 @@
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+            <a class="place__link opacity-link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
               target="_blank">Facebook</a>
           </div>
           <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
@@ -150,7 +150,7 @@
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+            <a class="place__link opacity-link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
           </div>
           <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
           <div class="place__container-text">
@@ -169,7 +169,7 @@
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+            <a class="place__link opacity-link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
           </div>
           <img class="place__image" src="./images/place-karelia.jpg" alt="Корелия">
           <div class="place__container-text">
@@ -183,7 +183,7 @@
         </article>
       </section>
       <section class="cover">
-        <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+        <a class="cover__overlay opacity-link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
           <h2 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе —&nbsp;путешествие
             от столицы до Байкала на электричках.</p>
@@ -192,11 +192,11 @@
     </main>
     <footer class="footer">
       <nav class="footer__nav">
-        <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
-        <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
-        <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
-        <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
-        <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
+        <a class="footer__link opacity-link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+        <a class="footer__link opacity-link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+        <a class="footer__link opacity-link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
+        <a class="footer__link opacity-link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+        <a class="footer__link opacity-link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
       </nav>
       <p class="footer__copyright">© 2022. Сухов Андрей</p>
     </footer>
